--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
-    "axios": "^1.6.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-cron": "^3.0.3"
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
+    "express": "5.1.0",
+    "node-cron": "4.1.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.0",
-    "@types/node-cron": "^3.0.11",
+    "@types/express": "5.0.3",
+    "@types/jest": "29.5.14",
+    "@types/node": "24.0.0",
+    "@types/node-cron": "3.0.11",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.19.4",
-    "typescript": "^5.3.3"
+    "tsx": "^4.20.1",
+    "typescript": "^5.8.3"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
