--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ STRIKE_API_KEY=your_strike_api_key_here
 STRIKE_ENVIRONMENT=sandbox  # or 'production'
 
 # DCA Configuration
-DCA_AMOUNT=100  # Amount to invest each period
+DCA_AMOUNT=100  # Amount to invest each period (optional) and if not set, exchange entire available balance each run (lump sum mode)
 DCA_FREQUENCY="0 0 * * 1"  # Cron expression (every Monday at midnight)
 SOURCE_CURRENCY=USD
 TARGET_CURRENCY=BTC
