chore: snapshot before modern refactor (pre-service/config split)

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,12 @@ STRIKE_ENVIRONMENT=sandbox  # or 'production'
 
 # DCA Configuration
 DCA_AMOUNT=100  # Amount to invest each period (optional) and if not set, exchange entire available balance each run (lump sum mode)
+OVERBOUGHT_MULTIPLIER=0.8
+OVERSOLD_MULTIPLIER=1.2
+NEUTRAL_MULTIPLIER=1.0
 DCA_FREQUENCY="0 0 * * 1"  # Cron expression (every Monday at midnight)
 SOURCE_CURRENCY=USD
 TARGET_CURRENCY=BTC
-
+DCA_BUY_DAYS="SUNDAY,MONDAY,TUESDAY,WEDNESDAY,THURSDAY,FRIDAY,SATURDAY"  # Optional: days allowed for DCA
 # Server Configuration
 PORT=3000
